# frozo-mirofish

./: .env.example  .gitignore  Dockerfile  README-EN.md  README.md  docker-compose.yml  railway.json  test_seed.txt
backend/: feature_flags.json  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  db.py
backend/app/api/: __init__.py  admin.py  auth.py  billing.py  crawl_import.py  graph.py  predict.py  report.py  simulation.py
backend/app/middleware/: __init__.py  auth.py  errors.py  service_auth.py
backend/app/models/: db_models.py  prediction_validation.py  project.py  task.py
backend/app/repositories/: __init__.py  base.py  chat_repo.py  project_repo.py  report_repo.py  simulation_repo.py  task_repo.py  user_repo.py
backend/app/services/: __init__.py  cache_service.py  cost_tracker.py  crawl_seed_transformer.py  email_service.py  graph_builder.py  graphiti_client.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  report_agent.py.bak  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: feature_flags.py  file_parser.py  (+4 more)
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
backend/tests/: conftest.py  test_auth.py  test_billing_api.py  test_cache_service.py  test_graph_api.py  test_middleware.py  test_task_repo.py  test_user_repo.py
(+68 files in other folders)
