[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish - A Simple and Universal Swarm Intelligence Engine, Predicting Anything"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Core framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # LLM related
    "openai>=1.0.0",

    # OASIS social media simulation
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",

    # File processing
    "PyMuPDF>=1.24.0",
    # Encoding detection (supports non-UTF-8 encoded text files)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",

    # Utility libraries
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "markdown>=3.5",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",

    # Authentication
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "authlib>=1.3",
    "flask-limiter>=3.5",
    "redis>=5.0",

    # Billing
    "dodopayments>=1.0",

    # Email
    "resend>=2.0",

    # Error tracking
    "sentry-sdk[flask]>=2.0",

    # Knowledge Graph (replaces Zep Cloud)
    "graphiti-core>=0.5",
    "neo4j>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
